refactor(test): modularize flinkboot-test and set transitive core requirement in flinkboot-kafka